--- a/BikeLanes.ipynb
+++ b/BikeLanes.ipynb
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the figure above, we can see that, predictably, the high-density downtown core has by far the highest collision rates. However, there are also notable hotspots in the north of the city along Finch and Steeles Aves, and throughout most of Scarborough in the east. Comparing this with the below map of Toronto's bike lanes, we can see that these regions correspond with some of the least developed bike infrastructure in the city:"
+    "In the figure above, we can see that, predictably, the high-density downtown core has by far the highest collision rates. However, there are also notable hotspots in the north of the city along Finch and Sheppard Aves, and throughout most of Scarborough in the east. Comparing this with the below map of Toronto's bike lanes, we can see that these regions correspond with some of the least developed bike infrastructure in the city:"
    ]
   },
   {
